src/command/auth/grants/revoke/snapshots/rover__command__auth__grants__revoke__tests__no_terminal_without_confirm_fails_before_any_request.snap
---
source: src/command/auth/grants/revoke/mod.rs
expression: "JsonOutput::from(&err)"
---
{
  "json_version": "1",
  "data": {
    "success": false
  },
  "error": {
    "message": "Revoking every grant for `user-123` needs confirmation, and there's no terminal to ask on. Pass `--confirm` to proceed without a prompt.",
    "code": "E062"
  }
}
