src/command/auth/grants/revoke/snapshots/rover__command__auth__grants__revoke__tests__refused_under_every_client_is_a_permission_error.snap
---
source: src/command/auth/grants/revoke/mod.rs
expression: "JsonOutput::from(&err)"
---
{
  "json_version": "1",
  "data": {
    "success": false
  },
  "error": {
    "message": "You don't have permission to manage grants across organization `acme`. This requires the organization's grant-management permission.",
    "code": "E053"
  }
}
